# rose

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: project.mdc
.cursor/skills/openspec-apply-changes/: SKILL.md
openspec/changes/archive/2026-06-09-add-init-command/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-09-list-workspaces-command/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-09-workspace-create/: proposal.md  tasks.md
openspec/changes/deactivate-workspace/: design.md  proposal.md  tasks.md
openspec/changes/edit-workspace-command/: design.md  proposal.md  tasks.md
openspec/changes/list-workspaces-command/: design.md
openspec/changes/workspace-create/: design.md
openspec/changes/workspace-inspect/: design.md  proposal.md  tasks.md
rose_cli/: __init__.py  ascii.py  cache.py  config.py  git.py  github.py  main.py
rose_cli/commands/: init.py
rose_cli/commands/org/: __init__.py  set.py
rose_cli/commands/repos/: __init__.py  sync.py
rose_cli/commands/workspace/: _helpers.py  create.py  edit.py  list.py
