[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rose"
version = "0.1.0"
description = "Rose CLI."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "click>=8.1.7",
  "InquirerPy>=0.3.4",
]

[project.scripts]
rose = "rose_cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["rose_cli*"]
